# tracker-api

./: .env.example  .gitignore  DEPLOY.md  FIX_DEPLOY.md  README.md  build.sh  get_igdb_token.py  init_db.py  pyproject.toml  render.yaml  requirements.txt
app/: config.py  main.py
app/database/: database.py
app/models/: user_model.py
app/routes/: igdb_routes.py  playstation_routes.py  steam_routes.py  user_routes.py  xbox_routes.py
app/schemas/: user_schema.py
app/services/: igdb_service.py  playstation_service.py  steam_service.py  user_service.py  xbox_service.py
app/utils/: security.py
